--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-md-5" style="background-color: darkkhaki">
-    <app-recipe-list
-      (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7" style="background-color: cadetblue;">
     <app-recipe-detail
